feat: adiciona botão Iniciar jogo no HTML

--- a/logica-js-projeto_inicial/logica-js-projeto_inicial/index.html
+++ b/logica-js-projeto_inicial/logica-js-projeto_inicial/index.html
@@ -25,6 +25,7 @@
             </div>
         </div>
     </div>
+    <button id="start-button">Iniciar jogo</button>
     <script src="app.js" defer></script>
 </body>
 
