foi revertido para a versão inicial,sem botão para inciar o jogo

--- a/logica-js-projeto_inicial/logica-js-projeto_inicial/index.html
+++ b/logica-js-projeto_inicial/logica-js-projeto_inicial/index.html
@@ -19,8 +19,8 @@
                 </div>
             </div>
         </div>
-        <div class="container__botao-container">
-            <button id="start-button">Iniciar jogo</button> <!-- Aqui o botão -->
+       <!--- <div class="container__botao-container">
+            <button id="start-button">Iniciar jogo</button> ---> <!-- Aqui o botão -->
         </div>
     </div>
     <script src="app.js"></script> <!-- Link para o JS -->
